@@ -195,7 +195,7 @@ cmake -G"$GENERATOR" ${INSTALL:+-DCMAKE_INSTALL_PREFIX=$INSTALL} \
   -Denable_ns3=$(onoff test "$have_NS3" = "yes" -a "$build_mode" = "Debug") \
   -Denable_jedule=OFF -Denable_lua=OFF ${MAY_DISABLE_SOURCE_CHANGE} \
   -Denable_java=$(onoff test "$build_mode" = "ModelChecker") \
-  -Denable_MSG=$(onoff test "$build_mode" = "ModelChecker") \
+  -Denable_msg=$(onoff test "$build_mode" = "ModelChecker") \
   $SRCFOLDER
 #  -Denable_lua=$(onoff test "$build_mode" != "DynamicAnalysis") \
 set +x
